<resources>

    <string name="app_name">aeManager</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_ae_manager">AeManager</string>
    <string name="warning_banner">This system is for the use of authorized users only. Individuals using this computer system without authority, or in excess of their authority, are subject to having all of their activities on this system monitored and recorded by system personnel. In the course of monitoring individuals improperly using this system, or in the course of system maintenance, the activities of authorized users may also be monitored. Anyone using this system expressly consents to such monitoring and is advised that if such monitoring reveals possible evidence of criminal activity, system personnel may provide the evidence of such monitoring to law enforcement officials.</string>
    <string name="start_button">Start</string>
    <string name="welcome">Welcome to the All Eyes Management System</string>
    <string name="title_activity_ae_manager_menu">Manager Main Menu</string>
    <string name="title_activity_ae_manager_help">Manager Help</string>
    <string name="title_activity_ae_manager_settings">Manager Settings</string>
    <string name="title_activity_ae_manager_event_list">Manager Event List</string>
    <string name="title_activity_ae_manager_action">Manager Event</string>
    <string name="events_button">View Events</string>
    <string name="settings_button">Settings</string>
    <string name="button_pwd">Set Password</string>
    <string name="host_text">Server Address:</string>
    <string name="userid_text">Username:</string>
    <string name="password_text">Password:</string>
    <string name="refresh_button">Refresh</string>
    <string name="help_button">Help</string>
    <string name="save_button">Save</string>
    <string name="cancel_button">Cancel</string>
    <string name="na_text">n/a</string>
    <string name="event_messages_text">Event Messages</string>
    <string name="log_label">Log</string>
    <string name="ignore_label">Ignore</string>
    <string name="event_label">Event:</string>
    <string name="source_label">Source:</string>
    <string name="status_label">Status:</string>
    <string name="type_label">Type:</string>
    <string name="action_label">Action:</string>
    <string name="text_label">Text:</string>
    <string name="app_version">Version 1.0</string>
    <string name="app_link">http://code.google.com/p/all-eyes/</string>
    <string name="help_text">The aeManager receives message events from the aeProxy and enables an administrator to respond to this events by selecting an appropriate action.  There are two actions currently defined for the ae system: ignore and log.  The ignore action tells the system to ignore that specific event.  The log action will write the event to a log that will enable an administrator to take action on it.</string>
    <string name="title_activity_ae_preferences">AePreferencesActivity</string>

</resources>
